fixed footer contrast colors on homepage desktop to increase the accessibility from 85 to a 95

--- a/P4-Project-Updates/style.css
+++ b/P4-Project-Updates/style.css
@@ -651,13 +651,21 @@ h5,
 h6,
 p,
 label,
-.btn,
-a {
+.btn {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
 }
 
+
+a{
+    font-family: "helvetica";
+    font-weight: 400;
+    color:#afb5c9;
+}
+a:hover{
+color: #fff;
+}
 .container {
     max-width: 1000px;
 }
